--- a/integrations/opennms-aci/config/pom.xml
+++ b/integrations/opennms-aci/config/pom.xml
@@ -25,7 +25,12 @@
 						<Bundle-Version>${project.version}</Bundle-Version>
 						 <Import-Package>
                          org.opennms.core.xml,
-                         org.springframework.core.io
+                         org.springframework.core.io,
+                         org.opennms.netmgt.config.utils,
+                         org.opennms.netmgt.config.southbound,
+                         org.opennms.netmgt.dao.southbound,
+                         org.slf4j,
+                         org.springframework.dao
 						<!-- org.apache.felix.service.command,
 						* -->
 						<!-- org.opennms.netmgt.config.utils;resolution:=optional -->
