--- a/integrations/opennms-aci/main-module/pom.xml
+++ b/integrations/opennms-aci/main-module/pom.xml
@@ -31,7 +31,8 @@
                         org.opennms.netmgt.events.api.*,
                         org.slf4j,
                         org.opennms.aci.rpc.rest.client,
-                        org.opennms.netmgt.config.southbound,
+                        org.opennms.netmgt.config.southbound.*,
+                        org.opennms.netmgt.dao.southbound.*,
                         org.glassfish.tyrus.client,
                         org.opennms.core.criteria.*,
                         org.opennms.core.logging.*,
