--- a/integrations/opennms-aci/main-module/pom.xml
+++ b/integrations/opennms-aci/main-module/pom.xml
@@ -41,7 +41,8 @@
                    		org.opennms.netmgt.xml.*,
                    		org.quartz.*,
                    		org.opennms.core.utils.*,
-                   		com.google.common.cache.*
+                   		com.google.common.cache.*,
+                   		org.opennms.netmgt.dao.jaxb.southbound.*
 						</Import-Package>
 					</instructions>
 				</configuration>
