--- a/integrations/opennms-aci/config/pom.xml
+++ b/integrations/opennms-aci/config/pom.xml
@@ -30,7 +30,8 @@
                          org.opennms.netmgt.config.southbound,
                          org.opennms.netmgt.dao.southbound,
                          org.slf4j.*,
-                         org.springframework.dao.*
+                         org.springframework.dao.*,
+                         org.opennms.core.spring.*
 						<!-- org.apache.felix.service.command,
 						* -->
 						<!-- org.opennms.netmgt.config.utils;resolution:=optional -->
